--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>name.lattuada</groupId>
@@ -24,7 +24,8 @@
         <build.timestamp>${maven.build.timestamp.format}</build.timestamp>
 
         <!-- Libraries -->
-        <spring-boot.version>2.4.3</spring-boot.version>
+        <spring-boot.version>2.4.4</spring-boot.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
         <commons-codec.version>1.15</commons-codec.version>
         <bcprov-jdk15on.version>1.68</bcprov-jdk15on.version>
         <commons-io.version>2.8.0</commons-io.version>
@@ -65,6 +66,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>${springfox-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -149,12 +155,6 @@
             <artifactId>junit-vintage-engine</artifactId>
             <version>5.7.1</version>
         </dependency>
-        <!--dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.7.1</version>
-            <scope>test</scope>
-        </dependency!-->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-spring</artifactId>
