--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <commons-io.version>2.8.0</commons-io.version>
         <security-logging.version>1.1.6</security-logging.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <modelmapper.version>2.3.9</modelmapper.version>
 
         <!-- Plugins -->
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -112,6 +113,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
         </dependency>
 
         <!-- Test libraries -->
