--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <spotbugs-maven-plugin.version>4.2.0</spotbugs-maven-plugin.version>
         <spotbugs.version>4.2.2</spotbugs.version>
-        <fb-contrib.version>7.4.7</fb-contrib.version>
+        <sb-contrib.version>7.4.7</sb-contrib.version>
         <findsecbugs-plugin>1.11.0</findsecbugs-plugin>
 
         <!-- Test libraries -->
@@ -238,9 +238,9 @@
                     <spotbugsXmlOutput>true</spotbugsXmlOutput>
                     <plugins>
                         <plugin>
-                            <groupId>com.mebigfatguy.fb-contrib</groupId>
-                            <artifactId>fb-contrib</artifactId>
-                            <version>${fb-contrib.version}</version>
+                            <groupId>com.mebigfatguy.sb-contrib</groupId>
+                            <artifactId>sb-contrib</artifactId>
+                            <version>${sb-contrib.version}</version>
                         </plugin>
                         <plugin>
                             <groupId>com.h3xstream.findsecbugs</groupId>
