--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
         <spotbugs.version>4.2.2</spotbugs.version>
         <sb-contrib.version>7.4.7</sb-contrib.version>
         <findsecbugs-plugin>1.11.0</findsecbugs-plugin>
+        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+        <checkstyle.version>8.41</checkstyle.version>
 
         <!-- Test libraries -->
         <junit-jupiter.version>5.7.1</junit-jupiter.version>
@@ -251,15 +253,52 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>spotbugs-after-verify</id>
-                        <phase>verify</phase>
+                        <id>spotbugs-after-compile</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>spotbugs</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <configLocation>sun_checks.xml</configLocation>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>checkstyle-after-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>checkstyle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+                <configuration>
+                    <configLocation>sun_checks.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
