--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.4</version>
+        <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>name.lattuada</groupId>
     <artifactId>trading</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>trading</name>
     <description>Trading Platform</description>
 
@@ -24,7 +24,7 @@
         <build.timestamp>${maven.build.timestamp.format}</build.timestamp>
 
         <!-- Libraries -->
-        <spring-boot.version>2.4.4</spring-boot.version>
+        <spring-boot.version>2.5.5</spring-boot.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
         <commons-codec.version>1.15</commons-codec.version>
         <bcprov-jdk15on.version>1.68</bcprov-jdk15on.version>
@@ -38,15 +38,15 @@
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <spotbugs-maven-plugin.version>4.2.0</spotbugs-maven-plugin.version>
-        <spotbugs.version>4.2.2</spotbugs.version>
+        <spotbugs.version>4.4.1</spotbugs.version>
         <sb-contrib.version>7.4.7</sb-contrib.version>
         <findsecbugs-plugin>1.11.0</findsecbugs-plugin>
         <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
         <checkstyle.version>8.41</checkstyle.version>
 
         <!-- Test libraries -->
-        <junit-jupiter.version>5.7.1</junit-jupiter.version>
-        <cucumber.version>6.10.2</cucumber.version>
+        <junit-jupiter.version>5.8.1</junit-jupiter.version>
+        <cucumber.version>6.11.0</cucumber.version>
     </properties>
 
     <dependencies>
@@ -251,7 +251,7 @@
                         </plugin>
                     </plugins>
                 </configuration>
-                <executions>
+                <!--executions>
                     <execution>
                         <id>spotbugs-after-compile</id>
                         <phase>compile</phase>
@@ -259,7 +259,7 @@
                             <goal>spotbugs</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
