--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Trading Platform</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -27,11 +27,11 @@
         <spring-boot.version>2.5.5</spring-boot.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
         <commons-codec.version>1.15</commons-codec.version>
-        <bcprov-jdk15on.version>1.68</bcprov-jdk15on.version>
-        <commons-io.version>2.8.0</commons-io.version>
+        <bcprov-jdk15on.version>1.69</bcprov-jdk15on.version>
+        <commons-io.version>2.11.0</commons-io.version>
         <security-logging.version>1.1.6</security-logging.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
-        <modelmapper.version>2.3.9</modelmapper.version>
+        <modelmapper.version>2.4.4</modelmapper.version>
 
         <!-- Plugins -->
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -47,6 +47,7 @@
         <!-- Test libraries -->
         <junit-jupiter.version>5.8.1</junit-jupiter.version>
         <cucumber.version>6.11.0</cucumber.version>
+        <assertj.version>3.21.0</assertj.version>
     </properties>
 
     <dependencies>
