--- a/src/test/resources/cucumber.properties
+++ b/src/test/resources/cucumber.properties
@@ -1,2 +1,3 @@
-cucumber.publish.enabled=false
+cucumber.publish.enabled=true
 cucumber.publish.quiet=true
+CUCUMBER_PUBLISH_TOKEN=e94e1815-5411-48ee-a32e-c16fae984326
