--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    		<groupId>io.rest-assured</groupId>
+    		<artifactId>rest-assured</artifactId>
+    		<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
